--- a/polis_app/package.json
+++ b/polis_app/package.json
@@ -10,6 +10,7 @@
     "geolib": "^3.3.1",
     "node_module": "0.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
